# hexed

./: .gitmodules  CMakeLists.txt
include/: CMakeLists.txt
include/blessed/: CMakeLists.txt  bit.hpp  blessed.hpp  byte.hpp  byteswap.hpp  cstddef.hpp  endian.hpp  memory.hpp  span.hpp  string_view.hpp  type_traits.hpp  uuid.hpp
include/hexed/: Album.hpp  CMakeLists.txt  Library.hpp  LibraryFormat.hpp  LibraryFormatManager.hpp  LibraryFormatReader.hpp  LibraryFormatWriter.hpp  LibraryReader.hpp  Log.hpp  Track.hpp  album.hpp  library.hpp  playlist.hpp  track.hpp
include/hexed/detail/: CMakeLists.txt  Compression.hpp  Encryption.hpp  MappedFile.hpp  MemoryMappedFile.hpp
include/hexed/formats/: CMakeLists.txt
include/hexed/formats/iTunes/: CMakeLists.txt  ITLFormat.hpp  ITLFormatReader.hpp  MusicDBFormat.hpp  itl.hpp  xml.hpp
include/hexed/formats/iTunes/detail/: CMakeLists.txt  buffer.hpp  envelope.hpp  file.hpp  halm.hpp  hdfm.hpp  hdsm.hpp  hghm.hpp  hiim.hpp  hilm.hpp  hohm.hpp  hplm.hpp  hsma.hpp  htim.hpp  htlm.hpp  section.hpp  segment.hpp
include/hexed/formats/iTunes/detail/impl/: file.hpp  segment.hpp
include/hexed/formats/iTunes/impl/: CMakeLists.txt  ITLFormat.hpp  ITLFormatReader.hpp
include/hexed/impl/: Album.hpp  CMakeLists.txt  Library.hpp  LibraryFormat.hpp  LibraryFormatManager.hpp
itl/: CMakeLists.txt  itl.cpp
itl/detail/: buffer.hpp  envelope.hpp  header.hpp  hohm.hpp  section.hpp
src/: CMakeLists.txt  main.cpp
submodules/: CMakeLists.txt
